--- a/style.scss
+++ b/style.scss
@@ -17,6 +17,20 @@ html {
   font-size: 100%;
 }
 
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+    border:2px solid #ff0000;
+}
+
+th {
+    border:2px solid #000000;
+}
+
+td {
+    border:1px solid #000000;
+}
+
 body {
 	background: $white;
   font: 14px/1.2 $helvetica;
