--- a/style.scss
+++ b/style.scss
@@ -17,19 +17,36 @@ html {
   font-size: 100%;
 }
 
+table { border-collapse: collapse; border-spacing: 0; }
+  td { vertical-align: top; }		  td { vertical-align: top; }
+  		  
 table {
-    border-collapse: collapse;
-    border-spacing: 0;
-    border:2px solid #ff0000;
+    width:100%;
+    border-collapse:collapse;
+    border:solid #dddddd;
+    border-width:1px 1px 2px 1px;
+    margin:1em 0;
+    -webkit-border-radius:3px;
+    -moz-border-radius:3px;
+    border-radius:3px;
+    -moz-background-clip:padding;
+    -webkit-background-clip:padding-box;
+    background-clip:padding-box
 }
 
-th {
-    border:2px solid #000000;
-}
+table th,
+table td {
+    border:solid #dddddd;border-width:1px;padding:10px;vertical-align:top}
 
-td {
-    border:1px solid #000000;
-}
+table th>*:first-child,
+table td>*:first-child {
+    margin-top:0}
+
+table th>*:first-child,
+table td>*:first-child {
+    margin-bottom:0}
+
+table th {font-weight:bold;color:#325d72;background-color:#eee}
 
 body {
 	background: $white;
