--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -14,21 +14,21 @@ code {
 .highlight .c { color: #586E75 } /* Comment */
 .highlight .err { color: #333 } /* Error */
 .highlight .g { color: #333 } /* Generic */
-.highlight .k { color: #859900 } /* Keyword */
+.highlight .k { color: #0086b3 } /* Keyword */
 .highlight .l { color: #333 } /* Literal */
 .highlight .n { color: #333 } /* Name */
-.highlight .o { color: #859900 } /* Operator */
+.highlight .o { color: #a71d5d } /* Operator */
 .highlight .x { color: #CB4B16 } /* Other */
 .highlight .p { color: #333 } /* Punctuation */
 .highlight .cm { color: #586E75 } /* Comment.Multiline */
-.highlight .cp { color: #859900 } /* Comment.Preproc */
+.highlight .cp { color: #a71d5d } /* Comment.Preproc */
 .highlight .c1 { color: #586E75 } /* Comment.Single */
-.highlight .cs { color: #859900 } /* Comment.Special */
-.highlight .gd { color: #2AA198 } /* Generic.Deleted */
+.highlight .cs { color: #a71d5d } /* Comment.Special */
+.highlight .gd { color: #183691 } /* Generic.Deleted */
 .highlight .ge { color: #333; font-style: italic } /* Generic.Emph */
 .highlight .gr { color: #DC322F } /* Generic.Error */
 .highlight .gh { color: #CB4B16 } /* Generic.Heading */
-.highlight .gi { color: #859900 } /* Generic.Inserted */
+.highlight .gi { color: #a71d5d } /* Generic.Inserted */
 .highlight .go { color: #333 } /* Generic.Output */
 .highlight .gp { color: #333 } /* Generic.Prompt */
 .highlight .gs { color: #333; font-weight: bold } /* Generic.Strong */
@@ -36,13 +36,13 @@ code {
 .highlight .gt { color: #333 } /* Generic.Traceback */
 .highlight .kc { color: #CB4B16 } /* Keyword.Constant */
 .highlight .kd { color: #268BD2 } /* Keyword.Declaration */
-.highlight .kn { color: #859900 } /* Keyword.Namespace */
-.highlight .kp { color: #859900 } /* Keyword.Pseudo */
+.highlight .kn { color: #a71d5d } /* Keyword.Namespace */
+.highlight .kp { color: #a71d5d } /* Keyword.Pseudo */
 .highlight .kr { color: #268BD2 } /* Keyword.Reserved */
 .highlight .kt { color: #DC322F } /* Keyword.Type */
 .highlight .ld { color: #333 } /* Literal.Date */
-.highlight .m { color: #2AA198 } /* Literal.Number */
-.highlight .s { color: #2AA198 } /* Literal.String */
+.highlight .m { color: #183691 } /* Literal.Number */
+.highlight .s { color: #183691 } /* Literal.String */
 .highlight .na { color: #333 } /* Name.Attribute */
 .highlight .nb { color: #B58900 } /* Name.Builtin */
 .highlight .nc { color: #268BD2 } /* Name.Class */
@@ -57,25 +57,25 @@ code {
 .highlight .py { color: #333 } /* Name.Property */
 .highlight .nt { color: #268BD2 } /* Name.Tag */
 .highlight .nv { color: #268BD2 } /* Name.Variable */
-.highlight .ow { color: #859900 } /* Operator.Word */
+.highlight .ow { color: #a71d5d } /* Operator.Word */
 .highlight .w { color: #333 } /* Text.Whitespace */
-.highlight .mf { color: #2AA198 } /* Literal.Number.Float */
-.highlight .mh { color: #2AA198 } /* Literal.Number.Hex */
-.highlight .mi { color: #2AA198 } /* Literal.Number.Integer */
-.highlight .mo { color: #2AA198 } /* Literal.Number.Oct */
+.highlight .mf { color: #183691 } /* Literal.Number.Float */
+.highlight .mh { color: #183691 } /* Literal.Number.Hex */
+.highlight .mi { color: #183691 } /* Literal.Number.Integer */
+.highlight .mo { color: #183691 } /* Literal.Number.Oct */
 .highlight .sb { color: #586E75 } /* Literal.String.Backtick */
-.highlight .sc { color: #2AA198 } /* Literal.String.Char */
+.highlight .sc { color: #183691 } /* Literal.String.Char */
 .highlight .sd { color: #333 } /* Literal.String.Doc */
-.highlight .s2 { color: #2AA198 } /* Literal.String.Double */
+.highlight .s2 { color: #183691 } /* Literal.String.Double */
 .highlight .se { color: #CB4B16 } /* Literal.String.Escape */
 .highlight .sh { color: #333 } /* Literal.String.Heredoc */
-.highlight .si { color: #2AA198 } /* Literal.String.Interpol */
-.highlight .sx { color: #2AA198 } /* Literal.String.Other */
+.highlight .si { color: #183691 } /* Literal.String.Interpol */
+.highlight .sx { color: #183691 } /* Literal.String.Other */
 .highlight .sr { color: #DC322F } /* Literal.String.Regex */
-.highlight .s1 { color: #2AA198 } /* Literal.String.Single */
-.highlight .ss { color: #2AA198 } /* Literal.String.Symbol */
+.highlight .s1 { color: #183691 } /* Literal.String.Single */
+.highlight .ss { color: #183691 } /* Literal.String.Symbol */
 .highlight .bp { color: #268BD2 } /* Name.Builtin.Pseudo */
 .highlight .vc { color: #268BD2 } /* Name.Variable.Class */
 .highlight .vg { color: #268BD2 } /* Name.Variable.Global */
 .highlight .vi { color: #268BD2 } /* Name.Variable.Instance */
-.highlight .il { color: #2AA198 } /* Literal.Number.Integer.Long */
+.highlight .il { color: #183691 } /* Literal.Number.Integer.Long */
