--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -8,7 +8,7 @@
 }
 
 code {
-  font-family:'Bitstream Vera Sans Mono','Courier', monospace;
+  font-family: apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 .highlight .c { color: #586E75 } /* Comment */
