--- a/_sass/_highlights.scss
+++ b/_sass/_highlights.scss
@@ -8,7 +8,8 @@
 }
 
 code {
-  font-family: apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 12px;
+  font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
 }
 
 .highlight .c { color: #586E75 } /* Comment */
