--- a/style.scss
+++ b/style.scss
@@ -49,8 +49,10 @@ table td>*:first-child {
 table th {font-weight:bold;color:#325d72;background-color:#eee}
 
 body {
-	background: $white;
-  font: 16px/1.4 $helvetica;
+  background: $white;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 16px;
+  line-height: 1.5;
   color: $darkGray;
 }
 
